--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,27 @@
 <%-include("./partials/header")%>
-<h1>Login form</h1>
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password" placeholder="Password">
-    <button>Log In</button>
-</form>
+
+<div class="container" style="height:auto" ;>
+    <div class="row" style="display:flex; width:100% ;flex-direction: column; align-items: center;">
+        <h1>Sign in to YelpCamp</h1></br>
+        <div style="width:30%; margin-top: 25px;">
+            <form action="/login" method="POST">
+
+                <div class="form-group">
+                    <input class="form-control" type="text" name="username" placeholder="Username">
+                </div>
+
+                <div class="form-group">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                </div>
+
+                <div class="form-group">
+                    <button class="btn btn-large btn-primary btn-block">Submit</button>
+                </div>
+
+                <a href="/campgrounds">Go Back</a>
+            </form>
+        </div>
+    </div>
+</div>
+
 <%-include("./partials/footer")%>
