--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,6 +19,7 @@
                 </div>
 
                 <a href="/campgrounds">Go Back</a>
+                <a href="/register" class="pull-right" >Register here</a>
             </form>
         </div>
     </div>
