--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,7 +18,7 @@
                     <h4 class="pull-right">$<%=campground.price%>/Night</h4>
                     <h4><a href=""><%=campground.name%></a></h4>
                     <p> <%=campground.description%> </p>
-                    <em><p>Submitted by:<%=campground.author.username%></p></em>
+                    <em><p>Submitted by: <%=campground.author.username%>, <%=moment(campground.createdAt).fromNow()%></p></em>
                     <%if(currentUser && campground.author.id.equals(currentUser._id)){%>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form class="deleteForm" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
@@ -37,7 +37,7 @@
                     <div class =row>
                         <div class="col-md-12">
                             <strong><%=comment.author.username%></strong>
-                            <span class="pull-right">10 days ago</span>
+                            <span class="pull-right"><%=moment(comment.createdAt).fromNow()%></span>
                             <p><%=comment.text%></p>
                             <%if(currentUser && comment.author.id.equals(currentUser._id)){%>
                             <a class="btn btn-xs btn-warning" href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit">Edit</a>
